# wordle-solver

./: .gitignore  LICENSE  README.md  board.py  board_browser.py  main.py  mypy.ini  pyproject.toml  utils.py
src/: agent.py  board.py  exceptions.py  game.py  game_adapter.py  local_adapter.py  termo_adapter.py
src/adapters/: __init__.py  game_adapter.py  local_adapter.py  termo_adapter.py
tests/e2e/: conftest.py  test_termo_adapter.py
tests/unit/: test_game.py  test_local_adapter.py
tests/unit/adapters/: test_local_adapter.py
