[project]
name = "wordle-solver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.58.0",
    "pytest>=9.0.2",
    "pytest-playwright>=0.7.2",
    "ruff>=0.15.7",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "nest-asyncio>=1.6.0",
]

[tool.uv]
exclude-newer = "7 days"